# Clipr

./: Cargo.toml  README.md
assets/: api_key.txt
src/: main.rs
