[package]
name = "clipr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
serde_json = "1.0.117"
reqwest = { version = "0.12.4", features = ["blocking"] }
tokio = { version = "1.38.0", features = ["full"] }
tray-icon = "0.14.3"
winit = "0.30.2"
serde = "1.0.203"

[build-dependencies]
copy_to_output = "2.2.0"
